<resources>
    <string name="app_name">Satsang Diary</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_selected_area">Seleceted Area</string>
    <string name="navigation_other_area">Other Areas</string>
    <string name="navigation_notification">Notifications</string>
    <string name="navigation_all_shabad">All Shabads</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_add_notification">Add Notification...</string>
    <string name="label_add_entry">Add New Entry...</string>
    <string name="label_dialog_header_add_new_entry">Add New Entry</string>
    <string name="label_area_name">Area Name...</string>
    <string name="label_center_name">Center Name...</string>
    <string name="label_shabad_name">Shabad...</string>
    <string name="label_remarks">Sewa Remarks...</string>
    <string name="label_first_sewa">1st Sewa</string>
    <string name="label_second_sewa">2nd Sewa</string>
    <string name="label_special_sewa">Special Sewa</string>
    <string name="label_none">None</string>
    <string name="label_select_date_time">Select Date and Time...</string>
    <string name="label_save_new_entry">Save Entry</string>
    <string name="label_dismiss">Dismiss</string>
    <string name="label_settings">Settings</string>
    <string name="label_backup_data">Back up all data</string>
    <string name="label_restore_data">Restore all data</string>
    <string name="label_about_app">About App...</string>
    <string name="version_code">Version : 2.0</string>
    <string name="save_changes">Save Changes...</string>
    <string name="label_edit_shabad">Edit Shabad</string>
    <string name="dismiss_changes">DIsmiss</string>
    <string name="placeholder_text">This is placeholder Text</string>
</resources>
