<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="@dimen/icon_size_about_app"
        android:layout_height="@dimen/icon_size_about_app"
        android:layout_gravity="center"
        android:src="@drawable/icon_diary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/version_code"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_dialog_dismiss"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_dismiss"
        android:textAllCaps="false" />

</LinearLayout>