<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_edit_shabad"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dialog_header" />

    <TextView
        android:id="@+id/tv_current_shabad_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_current_shabad"/>

    <EditText
        android:id="@+id/et_new_shabad_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl">

        <Button
            android:id="@+id/btn_save_changes"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_dismiss_changes"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss_changes"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>